...
        }
    }

    var label: String {
        switch self {
        case .low: return "Any"
        case .medium: return "Medium"
        case .high: return "High"
        }
    }

    var cost: String {
        switch self {
...
